hphp/hack/test/typecheck/class_level_where_clauses/this_as/protected_static_member_01.php.exp
File "protected_static_member_01.php", line 20, characters 11-12:
No static method `me` in `T` (Typing[4090])
  File "protected_static_member_01.php", line 18, characters 19-21:
  Did you mean instance method `foo` instead?
  File "protected_static_member_01.php", line 17, characters 7-7:
  Declaration of `T` is here
File "protected_static_member_01.php", line 29, characters 11-12:
No static method `me` in `T2` (Typing[4090])
  File "protected_static_member_01.php", line 14, characters 29-38:
  Did you mean `accessible` instead?
  File "protected_static_member_01.php", line 24, characters 7-8:
  Declaration of `T2` is here
File "protected_static_member_01.php", line 20, characters 11-12:
You cannot access this member (Typing[4112])
  File "protected_static_member_01.php", line 13, characters 27-28:
  This member is private
